tests/snapshots/snapshot__fixtures@m22__ods_html.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
assertion_line: 29
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m22/ods_html.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     data small;
3         set d.class;
4         if _n_ <= 3;
5     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: The data set WORK.SMALL has 3 observations and 5 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

6     ods html file='report.html';

7     title "PROC PRINT routed to HTML";

8     proc print data=small;
9         var name sex age height;
10    run;
NOTE: There were 3 observations read from the data set WORK.SMALL.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

11    ods html close;
NOTE: Writing HTML Body file: report.html

12    title "Text listing active again";

13    proc print data=small;
14        var name age;
15    run;
NOTE: There were 3 observations read from the data set WORK.SMALL.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

16    title;

==== LISTING ====
                                   Text listing active again

                                     Obs    name       age

                                       1    Alfred      14
                                       2    Alice       13
                                       3    Barbara     13

==== EXIT 0 ====
