tests/snapshots/snapshot__fixtures@m22__ods_options.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
assertion_line: 29
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m22/ods_options.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     data small;
3         set d.class;
4         if _n_ <= 3;
5     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: The data set WORK.SMALL has 3 observations and 5 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

6     options nocenter nodate nonumber;

7     title "PROC PRINT with global ODS options set";

8     proc print data=small;
9         var name sex age;
10    run;
NOTE: There were 3 observations read from the data set WORK.SMALL.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

11    title;

==== LISTING ====
                             PROC PRINT with global ODS options set

                                  Obs    name       sex    age

                                    1    Alfred     M       14
                                    2    Alice      F       13
                                    3    Barbara    F       13

==== EXIT 0 ====
